--- a/SalesApp/SalesApp/Views/GASTOS_OPERATION/NewProviderType.cshtml
+++ b/SalesApp/SalesApp/Views/GASTOS_OPERATION/NewProviderType.cshtml
@@ -57,6 +57,6 @@
     }
     
     <div>
-        @*@Html.ActionLink("Back to List", "Index", "GASTOS_OPERATION", new { id = Model.GASTOS_OPERATION.First().ProductCalenderId, CategoryProductId = Model.CategoryProductId})*@
+        @*@Html.ActionLink("Back to List", "Index", "GASTOS_OPERATION", new { ProductCalenderId = Model.GASTOS_OPERATION.First().ProductCalenderId, CategoryProductId = Model.CategoryProductId})*@
 
     </div>
