--- a/SalesApp/SalesApp/Views/Pax/Edit.cshtml
+++ b/SalesApp/SalesApp/Views/Pax/Edit.cshtml
@@ -107,7 +107,7 @@
 
 <div>
    
-    @Html.ActionLink("Back to List", "Index", "PRODUCT_RESERVATION", new { id = Request.Params["resvId"] },null) 
+    @Html.ActionLink("Back to List", "Index", "PRODUCT_RESERVATION", new { ProductCalenderId = Request.Params["ProductCalenderId"] },null) 
    
 </div>
 
