--- a/SalesApp/SalesApp/Views/GASTOS_OPERATION/Edit.cshtml
+++ b/SalesApp/SalesApp/Views/GASTOS_OPERATION/Edit.cshtml
@@ -76,10 +76,10 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index", new { id = Model.ProductCalenderId, CategoryProductId = Model.GASTOS_TYPE_PROVIDER.CategoryProductId })
 
-</div>
+    @Html.ActionLink("Back to List", "Index", new { ProductCalenderId = Model.ProductCalenderId, CategoryProductId = Model.GASTOS_TYPE_PROVIDER.CategoryProductId }, new { @class = "LinkButton" })
+
+<br />
 
 @section Scripts {
 @*@Scripts.Render("~/bundles/jquery")*@
