--- a/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Create.cshtml
+++ b/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Create.cshtml
@@ -4,13 +4,13 @@
     ViewBag.Title = "Create";
 }
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Create new RESERVATION</h4>
-        <hr />
+        <h4>Create new Reservation</h4>
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @*  <div class="form-group">*@
         @*@Html.LabelFor(model => model.ProductCalenderId, "ProductCalenderId", htmlAttributes: new { @class = "control-label col-md-2" })*@
@@ -25,7 +25,7 @@
 
         <table class="table">
             <tr>
-                <td>
+                <td class="soido">
                     <div class="form-group">
                         @Html.LabelFor(model => model.PaymentTypeId, "P-Type", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-7">
@@ -40,7 +40,7 @@
                             @Html.DropDownList("AgentId", null, htmlAttributes: new { @class = "form-control" })
                             @Html.ValidationMessageFor(model => model.AgentId, "", new { @class = "text-danger" })
                         </div>
-                    </div>                  
+                    </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.AgencyId, "Agency", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -73,20 +73,56 @@
                             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
                         </div>
                     </div>
+
+
                 </td>
 
                 <td>
-               
-
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.PickUp, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.EditorFor(model => model.PickUp, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.PickUp, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.DropOff, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.EditorFor(model => model.DropOff, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.DropOff, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Restrictions, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.EditorFor(model => model.Restrictions, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Restrictions, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.ProductReservationTypeId, "R-Type", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-7">
+                            @Html.DropDownList("ProductReservationTypeId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.ProductReservationTypeId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
                     @if (Request["CategoryProductId"] == "5")
                     {
                         <div class="form-group">
-                            @Html.LabelFor(model => model.ProductReservationTypeId, "R-Type", htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.LabelFor(model => model.CabinId, "CABIN", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-7">
-                                @Html.DropDownList("ProductReservationTypeId", null, htmlAttributes: new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.ProductReservationTypeId, "", new { @class = "text-danger" })
+                                @Html.DropDownList("CabinId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.CabinId, "", new { @class = "text-danger" })
                             </div>
                         </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.BloqueoDate, "TLimteBloqueo", htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-7">
+                                @Html.JQueryUI().DatepickerFor(model => model.BloqueoDate, new { htmlAttributes = new { @class = "form-control" } })
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             @Html.LabelFor(model => model.TourDaysId, "Tour-Días", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-7">
@@ -111,6 +147,7 @@
                     }
 
                 </td>
+
             </tr>
             <tr>
                 <td colspan="2">
@@ -118,7 +155,7 @@
                         @Html.Label("Repetir-Reserva", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-3">
                             @Html.EnumDropDownListFor(model => model.CuantaVeces, htmlAttributes: new { @class = "form-control" })
-                       </div>
+                        </div>
                     </div>
                 </td>
             </tr>
@@ -133,6 +170,9 @@
 
 
 @section Scripts {
-        @*@Scripts.Render("~/bundles/jquery")*@
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+
+    @Scripts.Render("~/bundles/datePicker")
+}
