--- a/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Edit.cshtml
+++ b/SalesApp/SalesApp/Views/PRODUCT_RESERVATION/Edit.cshtml
@@ -96,6 +96,11 @@
                         </div>
                     </div>
 
+                  
+                </td>
+           
+                <td >  
+                    
                     <div class="form-group">
                         @Html.LabelFor(model => model.PickUp, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-7">
@@ -119,22 +124,24 @@
                             @Html.ValidationMessageFor(model => model.Restrictions, "", new { @class = "text-danger" })
                         </div>
                     </div>
-
-
-
-                </td>
-           
-                <td >
-
-                    @if (Model.PRODUCT_CALENDER.CategoryProductId == 5)
-                    {
-                        <div class="form-group">                        
+                    <div class="form-group">                        
                                 @Html.LabelFor(model => model.ProductReservationTypeId, "R-Type", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-7">
                                     @Html.DropDownList("ProductReservationTypeId", null, htmlAttributes: new { @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.ProductReservationTypeId, "", new { @class = "text-danger" })
                                 </div>
                          </div>
+
+                    @if (Model.PRODUCT_CALENDER.CategoryProductId == 5)
+                    { 
+                        <div class="form-group">
+                             @Html.LabelFor(model => model.CabinId, "CABIN", htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-7">
+                                @Html.DropDownList("CabinId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.CabinId, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                      
                         <div class="form-group">
                             @Html.LabelFor(model => model.TourDaysId, "Tour-Days", htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-7">
